--- a/bertytech/assets/css/style.scss
+++ b/bertytech/assets/css/style.scss
@@ -3842,6 +3842,12 @@ $table-first-column-width-mobile: 115px;
     h1 {
       font-weight: bold;
     }
+    .berty-logo {
+      position: absolute;
+      right: 15px;
+      bottom: 15px;
+      opacity: .2;
+    }
   }
   .section-title {
     font-weight: bold;
