--- a/bertytech/layouts/_default/roadmap.html
+++ b/bertytech/layouts/_default/roadmap.html
@@ -43,7 +43,7 @@
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-5">
           <div class="vision__image">
-            <img src="1_berty_rocket.svg" class="img-fluid" />
+            <img src="{{($.Resources.GetMatch "1_berty_rocket.svg").RelPermalink}}" class="img-fluid" />
           </div>
         </div>
         <div class="col-lg-6 vision__text">
