fix github link

--- a/bertytech/layouts/_default/roadmap.html
+++ b/bertytech/layouts/_default/roadmap.html
@@ -216,7 +216,7 @@
               </div>
 
               <div class="roadmap__left__sections__join">
-                <a class="btn btn-bty btn-yellow" href="https://github.com/sponsors/berty" target="_blank">
+                <a class="btn btn-bty btn-yellow" href="https://github.com/berty/berty" target="_blank">
                   <i class="fab fa-github"></i> {{.Params.roadmap_card.button_text}}
                 </a>
               </div>
